--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,16 @@ a {
   z-index: -1;
   position: relative;
 } */
+
+.background-video {
+
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+}
